--- a/pages/about.html
+++ b/pages/about.html
@@ -15,17 +15,17 @@
     <div class="row">
       <!--Creating Header-->
     <header>
-          <nav>
-              <div class="col-lg-auto">
-              <h1><a href="../index.html" class="signature">Daniel Harman</a></h1> 
-              </div>
-              <div class="col-lg-auto">                   
-              <ul>
-                   <li class="about"><a href="./about.html">About</a></li>
-                  <li class="contact"><a href="./contact.html">Contact</a></li>
-              </ul>
-              </div>
-          </nav>      
+      <nav>
+        <div class="col-lg-auto">
+            <h1><a href="../index.html" class="signature">Daniel Harman</a></h1> 
+        </div>
+        <div class="col-lg-auto">                   
+            <ul>
+                <li class="about"><a href="./about.html">About</a></li>
+                <li class="contact"><a href="./contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>   
     </header>
     </div>
     <!--This is the main content of the page-->
@@ -38,12 +38,12 @@
         <aside class="Exhibition">
           <h4>Up Coming Exhibitions</h4>
             <ul>
-              <li>2025 Blah blah Exhibition, Lisson Gallery</li>
+              <li>2025 Classic Exhibition, Lisson Gallery</li>
             </ul>
           <h4>Past Exhibitions</h4>
             <ul>
-            <li>2024 Blah Blah Exhibtion, Gallery</li>
-            <li>2024 Blah Blah Exhibtion, Gallery</li>
+            <li>2024 Blue Lights Exhibtion, Speaks Gallery</li>
+            <li>2024 License Exhibtion, London Gallery</li>
             </ul>   
       </aside>
       </div>
